assets/style.css
/*General styles*/

:root {
  --blue: #00abc8;
  --blue-light: #b8e1e1;
  --off-white: #f4f4f4;
}

main *,
main *::before,
main *::after {
  box-sizing: border-box;
}

body {
  font-family: "Roboto", sans-serif;
  font-size: 1rem;
  width: 100%;
  color: black;
  font-weight: 400;
  margin: 0;
  padding: 0;
}

h1 {
  font-family: Roboto;
  font-weight: 300;
  font-style: normal;
  color: rgb(0, 0, 0);
  font-size: 42px;
}

h2 {
  font-family: Roboto;
  font-weight: 700;
  font-style: normal;
  color: rgb(0, 0, 0);
  font-size: 2.5rem;
}

main p {
  font-size: 1rem;
  color: black;
  font-family: inherit;
  line-height: 1.625rem;
  font-weight: 400;
}

a {
  text-decoration: none;
  color: black;
}

img {
  max-width: 100%;
  border: none;
}

.primary__btn {
  font-size: 1rem;
  font-weight: bold;
  border-radius: 28px;
  background-color: var(--blue);
  padding: 12px 54px;
  display: inline-block;
  color: white;
  font-size: 16px;
  line-height: 18px;
}

.bold {
  font-weight: bold;
}
.light {
  font-weight: 300;
}
.center {
  text-align: center;
}

.highlighted__text span {
  position: relative;
}

.highlighted__text span::after {
  content: "";
  height: 26px;
  position: absolute;
  left: 0;
  top: 40%;
  z-index: -1;
  background-color: var(--blue-light);
  margin-left: -1rem;
  width: calc(100% + 2rem);
}

.highlighted__text--blue-light span::after {
  background-color: var(--blue-light);
}
.highlighted__text--blue span::after {
  background-color: var(--blue);
}

.br__desktop {
  display: none;
}

.container {
  max-width: 352px;
  margin: 0 auto;
  padding: 1rem 0;
}

.section__title {
  font-size: 36px;
  transform: scale(0.85);
  margin: 0.5rem;
}

/*Hero container*/

.hero {
  background-image: url(./images/mobile-hero.png);
  padding-bottom: 22rem;
  padding-top: 2rem;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
}

.hero__title {
  transform: scale(0.85);
  margin: 0.5rem 0;
  font-size: 43px;
  text-align: center;
}

.test {
  position: relative;
  left: 50%;
  transform: translateX(-50%);
  display: inline-block;
  margin: 0 auto;
  text-align: left !important;
}

.hero__subtitle {
  padding: 0 22px;
  margin: 1rem 0;
  font-size: 16px;
  transform: scale(0.85);
}
.hero__btn {
  text-align: center;
}

/*Benefits*/
.benefits {
  padding-top: 2rem;
  padding-bottom: 2rem;
  background-color: var(--off-white);
}
.benefits__cards {
  padding-top: 2rem;
}
.benefits__card {
  text-align: center;
  width: 250px;
  margin: 0 auto;
  padding-bottom: 2rem;
}
.benefits__card--title {
  margin: 10px 0;
  font-size: 26px;
  text-transform: uppercase;
  transform: scale(0.85);
}
.benefits__card--subtitle {
  font-size: 16px;
  line-height: 1.4;
  max-width: 172px;
  margin: 8px auto;
  transform: scale(0.85);
}

/*Testmonial*/
.testimonial {
  padding: 2rem 0;
  padding-top: 5rem;
}

.testimonial__text::before {
  content: "";
  position: absolute;
  top: -170px;
  right: 0px;
  width: 131px;
  height: 131px;
  background-image: url(./images/succulents.png);
  background-size: cover;
}
.testimonial__text::before {
  right: 25px;
}

.testmonial__content::before {
  content: "";
  display: block;
  background-image: url(./images/quot-icon.png);
  background-repeat: no-repeat;
  width: 100px;
  height: 93px;
  background-size: contain;
  margin-left: 36px;
}

.testimonial__text {
  font-size: 16px;
  padding: 0px 14px;
  margin: 0;
  position: relative;
  transform: scale(0.85);
}
.testimonial__author {
  font-weight: 300;
  font-size: 14px;
  margin-top: 0;
  margin-bottom: 2rem;
  padding: 0 14px;
  transform: scale(0.85);
}
.testimonial__btn {
  text-align: center;
}

.testmonial__img {
  padding-top: 2rem;
  text-align: center;
  max-width: 287px;
  margin: 0 auto;
}

/*All We Need*/
.need {
  background-color: var(--off-white);
  padding-bottom: 2rem;
}
.need__cards {
  padding-top: 3rem;
}
.need__card {
  max-width: 220px;
  margin: 0 auto;
  margin-bottom: 3rem;
  text-align: center;
}
.need__card .need__card--img {
  border-radius: 50%;
  border-width: 7px;
  border-style: solid;
  width: 195px;
}
.need__cards .b1 {
  border-color: #f6cad9;
}
.need__cards .b2 {
  border-color: #b8e1e1;
}
.need__cards .b3 {
  border-color: #f18cb9;
}
.need__cards .b4 {
  border-color: #b7d259;
}
.need__card--text {
  font-size: 14px;
  line-height: 1.4;
  margin: 16px 0;
}

/*Waiting*/
.waiting .container {
  padding-bottom: 0;
}
.waiting__content {
  margin-bottom: 3rem;
}
.waiting__title {
  margin-bottom: 1.5rem;
}
.waiting__text {
  font-size: 14px;
  line-height: 1.4rem;
  padding: 0 2rem;
}
.waiting--btn {
  text-align: center;
  margin-top: 1.5rem;
}
.waiting__img__wrapper {
  text-align: center;
}
.waiting__img--img {
  display: block;
  margin: 0 auto;
  width: 319px;
  width: 266px;
}
.waiting__img {
  position: relative;
}
.waiting__img::after {
  content: "";
  background-image: url("./images/pink2.png");
  background-size: 100%;
  background-repeat: no-repeat;
  background-position: top center;
  display: block;
  position: absolute;
  right: 18px;
  top: -56px;
  width: 319px;
  height: 342px;
  z-index: -1;
}

/*Responsive styles*/
@media (min-width: 768px) {
  .br__desktop {
    display: initial;
  }
  .container {
    max-width: 1164px;
    margin: 0 16px;
    margin: 0 auto;
  }
  .hero {
    background-image: url(./images/hero-bg.jpg);
    padding-bottom: 6rem;
  }
  .hero__content {
    width: 60%;
    padding-left: 6rem;
  }
  .hero__title {
    text-align: left;
    font-size: 48px;
    line-height: 1.2;
    transform: scale(1);
    text-align: left;
  }
  .hero__subtitle {
    text-align: left;
    font-size: 16px;
    padding-left: 0;
    max-width: 420px;
    margin: 3rem 0px;
    line-height: 26px;
    transform: scale(1);
  }
  .hero__btn {
    text-align: left;
    padding-left: 0;
  }
  .section__title {
    line-height: 1;
    transform: scale(1);
    font-size: 36px;
    line-height: 1.2;
  }

  .highlighted__text span::after {
    margin-left: -2rem;
    width: calc(100% + 4rem);
    height: 34px;
  }

  /*benefits*/
  .benefits .container {
    padding-left: 6.5rem;
    padding-right: 6.5rem;
  }
  .benefits__cards {
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .benefits__card--title {
    transform: scale(1);
  }

  .benefits__card--subtitle {
    transform: scale(1);
    margin: 18px auto;
  }

  /*testmonial*/
  .testimonial {
    padding-top: 3rem;
    background-image: url(./images/testemonial-bg.png);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
  }

  .testimonial .container {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 3.5rem;
  }

  .testmonial__content {
    order: 2;
    width: 45%;
  }
  .testmonial__img {
    width: 40%;
    max-width: 432px;
    text-align: center;
  }

  .testmonial__content::before {
    margin-left: 0;
    width: 123px;
    height: 115px;
  }

  .testimonial__btn {
    text-align: left;
    padding-left: 1.5rem;
  }
  .testimonial__text {
    max-width: 360px;
    padding-left: 0;
    transform: scale(1);
    margin-top: 1rem;
  }
  .testimonial__text::before {
    top: -190px;
    right: -40px;
    width: 131px;
    height: 131px;
  }

  .testimonial__author {
    padding-left: 0;
    margin-top: 1rem;
    transform: scale(1);
  }
  .testimonial__btn {
    padding-left: 0;
  }
  /*Need*/
  .need .container {
    padding-top: 3.5rem;
    padding-bottom: 2.5rem;
  }
  .need .section__title {
    padding-left: 4.5rem;
    padding-right: 4.5rem;
    position: relative;
    display: inline-block;
  }
  .need .section__title::after {
    content: "";
    background-image: url("./images/arrow.png");
    background-size: contain;
    background-repeat: no-repeat;
    position: absolute;
    top: -25px;
    right: -180px;
    width: 271px;
    height: 143px;
  }
  .need__card {
    margin: 0;
    max-width: 250px;
  }
  .need__cards {
    display: flex;
    justify-content: center;
    gap: 3rem;
    padding: 3rem 1.5rem;
  }
  .need__card .need__card--img {
    width: 202px;
  }
  .need__card--text {
    font-size: 16px;
    line-height: 26px;
    margin: 38px 0 14px;
  }
  /*Waiting*/
  .waiting {
    padding-top: 2.5rem;
    overflow: hidden;
  }
  .waiting__title {
    margin-bottom: 2.5rem;
  }
  .waiting .container {
    display: flex;
    justify-content: space-between;
    padding-left: 4.5rem;
    padding-right: 4.5rem;
  }
  .waiting__text {
    max-width: 390px;
    font-size: 16px;
    padding: 0;
  }
  .waiting--btn {
    text-align: left;
  }

  .waiting__img {
    width: 484px;
    height: 398px;
  }

  .waiting__img--img {
    width: 372px;
  }
  .waiting__img::after {
    background-position: top center;
    background-image: url("./images/pink-bg.png");
    top: -70px;
    right: -18px;
    width: 484px;
    height: 484px;
  }
}

